# Core

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: alembic.ini  app.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 175e4566b282_add_meta_id_default.py  2342d5694a7e_add_extension_crypto.py  50f16fff837a_create_meta_task_index.py  612b76967a81_add_meta_origin_url_index.py  7d84943a8de7_add_secret_table.py  da1cc51f7c3b_added_meta_task_table.py
src/sciuromorpha_core/: __init__.py  app.py  config.py  exceptions.py  mq_schema.py  settings.py  static.py
src/sciuromorpha_core/api/: __init__.py  meta.py  secret.py  storage.py  task.py
src/sciuromorpha_core/client/: meta.py  secret.py  task.py
src/sciuromorpha_core/db/: base_class.py  init_db.py  session.py
src/sciuromorpha_core/model/: __init__.py  meta.py  secret.py  task.py
src/sciuromorpha_core/rpc/: __init__.py  meta.py  mq_schema.py  secret.py  storage.py  task.py
