[tool.poetry]
name = "sciuromorpha-core"
version = "0.1.0"
description = ""
authors = ["Whale Mo <ncwhale@gmail.com>"]
readme = "README.md"
packages = [{include = "sciuromorpha_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
sqlalchemy-serializer = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
