[tool.poetry]
name = "sciuromorpha-core"
version = "0.1.0"
description = ""
authors = ["Whale Mo <ncwhale@gmail.com>"]
readme = "README.md"
packages = [{include = "sciuromorpha_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
sqlalchemy-serializer = "^1.4.1"
faststream = {extras = ["rabbit", "redis"], version = "^0.3.1"}
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
pylance = "^0.8.20"
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = []
in-place = true
recursive = true
aggressive = 3
